k8s/java-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-service
  namespace: monitoring-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-service
  template:
    metadata:
      labels:
        app: java-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: java-service
          image: danielolasupo/order-api:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
---

apiVersion: v1
kind: Service
metadata:
  name: java-service
  namespace: monitoring-demo
  labels:
    app: java-service
spec:
  selector:
    app: java-service
  ports:
    - name: metrics
      port: 80
      targetPort: 8080
